--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -5,6 +5,7 @@
     height: 120px;
     box-shadow: 2px 2px 10px #397207;
     text-shadow: 2px 2px 3px #307207;
+    z-index: 100;
 
     #logo {
       font-family: "Bungee", "Sans-Serif", cursive;
