--- a/src/app/shared/components/dashboard/profile/profile.component.html
+++ b/src/app/shared/components/dashboard/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<div class="profile col-12 col-lg-6 d-flex justify-content-center">
+  <div class="my-5">
+    <img src="/assets/profile-hex.png" />
+    <h4 class="text-center my-2"><strong>Julia</strong> Gatina</h4>
+  </div>
+</div>
