--- a/src/app/shared/components/dashboard/profile/profile.component.scss
+++ b/src/app/shared/components/dashboard/profile/profile.component.scss
@@ -1,11 +1,12 @@
-:host {
+@import "src/styles/colors";
 
+:host {
   .profile {
     margin-top: 110px;
     height: 400px;
-    background-color: rgb(155, 157, 157);
+    background-color: $hit-grey-grey;
     background-image: url("/assets/brick-wall.png");
-    color: #545149;
+    color: $masala-brown;
 
     div img {
       -webkit-transform: scale(1);
