--- a/src/app/shared/components/dashboard/profile/profile.component.scss
+++ b/src/app/shared/components/dashboard/profile/profile.component.scss
@@ -17,7 +17,7 @@
       &:hover {
         -webkit-transform: scale(1.1);
         transform: scale(1.05);
-        background-color: lightgrey;
+        background-color: $light-grey-grey;
         border-radius: 80%;
       }
     }
