--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -4,8 +4,8 @@
   .navbar {
     background-color: $yellow-green-green;
     height: 120px;
-    box-shadow: 2px 2px 10px green;
-    text-shadow: 2px 2px 3px green;
+    box-shadow: 2px 2px 10px $green-green;
+    text-shadow: 2px 2px 3px $green-green;
     z-index: 100;
 
     #logo {
@@ -14,18 +14,18 @@
       font-size: 33px;
 
       &:hover {
-        color: yellow;
+        color: $yellow-yellow;
         transform: scale(1.05);
       }
     }
 
     #write-tweet {
       font-size: 24px;
-      color: white;
+      color: $white-white;
       text-decoration: none;
 
       &:hover {
-        color: yellow;
+        color: $yellow-yellow;
         transform: scale(1.05);
       }
     }
